[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reynard-mcp-server"
version = "2.0.0"
description = "MCP Reynard Linting Server with comprehensive development tools"
authors = [{ name = "Reynard Team" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["asyncio"]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "ruff",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-import-order",
    "flake8-print",
    "flake8-simplify",
    "flake8-unused-arguments",
    "flake8-use-pathlib",
    "eradicate",
    "pandas-vet",
    "pygrep-hooks",
    "tryceratops",
    "flynt",
    "perflint",
    "refurb",
    "bandit",
    "safety",
    "pre-commit",
    "types-requests",
    "types-setuptools",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[tool.mypy]
cache_dir = "/tmp/mypy_cache"
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
mypy_path = "stubs"

# Module-specific configurations
[[tool.mypy.overrides]]
module = [
    "subprocess",
    "json",
    "logging",
    "secrets",
    "pathlib",
    "asyncio",
    "sys",
    "importlib",
]
ignore_missing_imports = true

# Ignore missing imports for external tools
[[tool.mypy.overrides]]
module = [
    "eslint",
    "prettier",
    "flake8",
    "black",
    "isort",
    "markdownlint",
    "bandit",
    "audit-ci",
    "imv",
    "notify-send",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "T20", # flake8-print
]
ignore = [
]

[tool.ruff.per-file-ignores]
"test_*.py" = ["T201"] # Allow print statements in test files
