[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reynard-gatekeeper"
version = "0.1.0"
description = "Authentication and authorization library for Python applications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "pydantic",
    "python-jose[cryptography]",
    "argon2-cffi",
    "python-multipart",
    "passlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "ruff",
    "pre-commit",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/yourusername/gatekeeper"
Documentation = "https://gatekeeper.readthedocs.io"
Repository = "https://github.com/yourusername/gatekeeper.git"
"Bug Tracker" = "https://github.com/yourusername/gatekeeper/issues"

[tool.hatch.build.targets.wheel]
packages = ["gatekeeper"]

# Gatekeeper package configuration
# Tooling configuration is inherited from the monorepo root pyproject.toml
# This file only contains gatekeeper-specific project metadata and dependencies

# Note: All tooling configuration (black, isort, mypy, ruff, pytest, etc.)
# is defined in the monorepo root pyproject.toml for consistency across packages
