[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reynard-mcp-server"
version = "2.0.0"
description = "MCP Reynard Linting Server with comprehensive development tools"
authors = [{ name = "Reynard Team" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "reynard-agent-naming",
    "reynard-gatekeeper", 
    "reynard-ecs-world",
    "aiohttp",
    "PyJWT",
    "asyncio",
    "pydantic",
    "pathlib",
    "typing-extensions",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "types-requests",
    "types-setuptools",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
mypy_path = "stubs"

# Module-specific configurations
[[tool.mypy.overrides]]
module = [
    "subprocess",
    "json",
    "logging",
    "secrets",
    "pathlib",
    "asyncio",
    "sys",
    "importlib",
]
ignore_missing_imports = true

# Ignore missing imports for external tools
[[tool.mypy.overrides]]
module = [
    "eslint",
    "prettier",
    "flake8",
    "black",
    "isort",
    "markdownlint",
    "bandit",
    "audit-ci",
    "imv",
    "notify-send",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "T20", # flake8-print
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"test_*.py" = ["T201"] # Allow print statements in test files
